# Maxim_Wellness_Suite_Library_Android_Source_Code_v4.4.5

./: .gitignore  build.gradle  settings.gradle
algorithms/: CMakeLists.txt
algorithms/libs/algorithms/include/: AlgoWrapper.h  mxm_hrv_public.h  mxm_respiration_rate_manager.h  mxm_sleep_manager.h  mxm_sports_coaching_public.h  mxm_stress_monitoring.h
algorithms/src/androidTest/java/com/maximintegrated/algorithms/: ExampleInstrumentedTest.java
algorithms/src/main/: AndroidManifest.xml
algorithms/src/main/cpp/: MaximAlgorithms.cpp
algorithms/src/main/java/com/maximintegrated/algorithms/: AlgorithmInitConfig.java  AlgorithmInput.java  AlgorithmOutput.java  AlgorithmUser.java  AlgorithmVersion.java  MaximAlgorithms.java
algorithms/src/main/java/com/maximintegrated/algorithms/hrv/: FreqDomainHrvMetrics.java  HrvAlgorithmInitConfig.java  HrvAlgorithmOutput.java  TimeDomainHrvMetrics.java
algorithms/src/main/java/com/maximintegrated/algorithms/respiratory/: RespiratoryRateAlgorithmInitConfig.java  RespiratoryRateAlgorithmOutput.java
algorithms/src/main/java/com/maximintegrated/algorithms/sleep/: SleepAlgorithmEncodedOutput.java  SleepAlgorithmInitConfig.java  SleepAlgorithmOutput.java  SleepAlgorithmOutputFrame.java
algorithms/src/main/java/com/maximintegrated/algorithms/sports/: SportsCoachingAlgorithmInitConfig.java  SportsCoachingAlgorithmOutput.java  SportsCoachingEpocConfig.java  SportsCoachingEstimateOutput.java  SportsCoachingHistory.java  SportsCoachingHistoryItem.java  SportsCoachingHrStats.java  SportsCoachingReadinessOutput.java  SportsCoachingRecoveryOutput.java  SportsCoachingRecoveryTimeConfig.java  SportsCoachingSession.java  SportsCoachingStatus.java  SportsCoachingVo2MaxOutput.java
algorithms/src/main/java/com/maximintegrated/algorithms/stress/: StressAlgorithmOutput.java
algorithms/src/test/java/com/maximintegrated/algorithms/: ExampleUnitTest.java
app/: build.gradle
bluetooth/: build.gradle
docs/: Maxim Wellness App User Guide & Wellness Library Integration Guide 4.4.5.docx  Release_Notes.txt  ~$xim Wellness App User Guide & Wellness Library Integration Guide 4.4.5.docx
ecgfilter/: CMakeLists.txt  build.gradle
(+365 files in other folders)
